package poneytoponey;

public record Entry(String username, String ip) {
}
