@startuml

' STATIC
' Generated by CTP - https://github.com/samuelroland/ctp

' Style
hide empty members
skinparam classAttributeIconSize 0
skinparam classFontSize 25
hide members
hide methods

' Additions

interface Remote <<java.rmi>>

HumanIdentity "1"-l-"0..1" App: create <
App "1"-l-"1" View: start >

Directory -> DirectoryServer: connects via HTTP >
Directory -l-> Entry: return structured >
Chat "1"--"*" Message: stores >
HumanIdentity "1"-"*" Chat: stores >
HumanIdentity "1"-d-"1" Directory: use as client >
HumanIdentity "*"-l-"*" HumanIdentity: \nremotely discuss with >
HumanIdentity "0..1"-l-"*" View: \ndelegate actions and subscribe for notifs >

' REMOVE

' ENDSTATIC
class Chat {
	- uuid: UUID
	- approved: boolean
	- messages: List<Message>
	- otherUsername: String
	+ getUuid(): UUID
	+ getOtherUsername(): String
	+ getApproved(): boolean
	+ setApproved(t: boolean): void
	+ insertNewMessage(text: String, author: String): Message
	+ getMessages(): List<Message>
}


class DirectoryServer {
	- {static} directory: Map<String,String>
	+ {static} main(args: String[]): void
	- {static} handleList(exchange: HttpExchange): void
	- {static} handleRegister(exchange: HttpExchange): void
	- {static} handleRemove(exchange: HttpExchange): void
	- {static} readBody(is: InputStream): String
	- {static} sendText(exchange: HttpExchange, status: int, text: String): void
}


class Directory {
	- host: String
	+ list(): List<Entry>
	+ join(username: String): void
	+ leave(): void
	- readStream(is: InputStream): String
}


class Entry {
	- username: String
	- ip: String
	+ username(): String
	+ ip(): String
}


interface View {
	+ {abstract}start(directoryHost: String): void
	+ {abstract}showChatRequest(from: String): void
	+ {abstract}showChatClose(from: String): void
	+ {abstract}showChatRefuse(from: String): void
	+ {abstract}showChatApprobation(from: String): void
	+ {abstract}showChatMessage(msg: Message): void
}

interface Identity {
	+ {abstract}remoteAskForChat(author: String, chatID: UUID): void
	+ {abstract}remoteApproveBackChat(chatID: UUID): void
	+ {abstract}remoteRefuseChat(chatID: UUID): void
	+ {abstract}remoteSendMessageInChat(chatID: UUID, text: String, sender: long): void
	+ {abstract}remoteCloseChat(chatID: UUID): void
}

class ShellView {
	- currentChat: UUID
	- currentChatRecipient: String
	- joinedNetwork: boolean
	- identity: HumanIdentity
	- scanner: Scanner
	- directoryHost: String
	- join(username: String): void
	+ showHelp(): void
	- createSwitchChat(recipient: String): void
	- listChats(): void
	- closeChat(recipient: String): void
	- approveChat(recipient: String): void
	- refuseChat(recipient: String): void
	- sendMessage(text: String): void
	- listParticipants(): void
	- showPrompt(): void
	- waitWithShellPrompt(): void
	- parseCommand(line: String): void
	- exit(): void
	- showMessage(msg: Message): void
	+ start(directoryHost: String): void
	+ showChatRequest(from: String): void
	+ showChatClose(from: String): void
	+ showChatApprobation(from: String): void
	+ showChatRefuse(from: String): void
	+ showChatMessage(msg: Message): void
	- showHistory(): void
}


class Message {
	- texte: String
	- senderTimestamp: long
	- index: Integer
	- author: String
	+ getTexte(): String
	+ getSenderTimestamp(): long
	+ getIndex(): Integer
	+ getAuthor(): String
}


class App {
	+ {static} PORT: int
	+ {static} main(args: String[]): void
}


class HumanIdentity {
	- username: String
	- chats: Map<UUID,Chat>
	- directory: Directory
	- views: List<View>
	- ourLocalRegistry: Registry
	- IDENTITY_BIND: String
	+ leave(): void
	+ getUsername(): String
	+ listParticipantsUsername(): List<String>
	+ getRemoteIdentityFromUsername(recipient: String): Identity
	+ createChat(recipient: String): Chat
	- getRemoteIdentityFromChat(chatID: UUID): Identity
	+ approveChat(chatID: UUID): void
	+ refuseChat(oldChatID: UUID): void
	+ subscribeViewForChatEvent(view: View): void
	+ sendMessage(chatID: UUID, text: String): void
	+ closeChat(chatID: UUID): void
	+ remoteAskForChat(author: String, chatID: UUID): void
	+ remoteApproveBackChat(chatID: UUID): void
	+ remoteRefuseChat(chatID: UUID): void
	+ remoteSendMessageInChat(chatID: UUID, text: String, senderTimestamp: long): void
	+ remoteCloseChat(chatID: UUID): void
	+ getChats(): Map<UUID,Chat>
	+ addToChats(uuid: UUID, chat: Chat): void
	+ removeTOChats(uuid: UUID): void
	+ findUuidByUsername(recipientUsername: String): UUID
	- {static} resolveRmiHostname(): String
}




Remote <|-- Identity
View <|.. ShellView
Identity <|.. HumanIdentity
@enduml
